# shredr_fun

./: .dockerignore  .gitignore  .mocharc.json  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: codeql.yml
contracts/: Anchor.toml  README.md  package.json
contracts/encrypted-ixs/: Cargo.toml
contracts/programs/contracts/: Cargo.toml
contracts/programs/contracts/src/: lib.rs
contracts/tests/: contracts.ts
public/: settler_wasm_bg.wasm
shredr-backend/: .Dockerfile  .env.example  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  TESTING.md  test-client.html
shredr-backend/src/: db.rs  db_routes.rs  error.rs  main.rs  routes.rs  webhook.rs  webhook_routes.rs  websocket.rs  websocket_routes.rs
shredr-backend/src/db/: db.rs  db_routes.rs  mod.rs
shredr-backend/src/webhook/: mod.rs  webhook.rs  webhook_routes.rs
shredr-backend/src/websocket/: mod.rs  websocket_routes.rs
shredr-program/: Cargo.toml
shredr-program/idl/: shredr_program.json
shredr-program/src/: constants.rs  entrypoint.rs  errors.rs  helpers.rs  lib.rs  state.rs
shredr-program/src/instructions/: commit.rs  commit_undelegate.rs  idl.rs  initialize.rs  initialize_delegate.rs  instructions.rs  mod.rs  private_transfer.rs  withdraw.rs
shredr-program/tests/clients/js/: package.json
shredr-program/tests/clients/rust/src/: cargo.toml
shredr-program/tests/idl/: shredr_program.json
shredr_program/: Anchor.toml
shredr_program/programs/shredr_program/: Cargo.toml
shredr_program/tests/: shredr_program.ts
src/: App.css  App.tsx  index.css  main.js  main.tsx  style.css
src/components/: index.ts
src/components/AddressDisplay/: AddressDisplay.css  AddressDisplay.tsx
src/components/Footer/: Footer.css  Footer.tsx
src/components/GeneratorCard/: GeneratorCard.css  GeneratorCard.tsx  index.ts
src/components/HashDisplay/: HashDisplay.css  HashDisplay.tsx  index.ts
src/components/Navbar/: Navbar.css  Navbar.tsx
src/components/SeedDisplay/: SeedDisplay.css  SeedDisplay.tsx  index.ts
src/components/TransactionApprovalModal/: TransactionApprovalModal.css  TransactionApprovalModal.tsx  index.ts
src/components/TransactionMonitor/: TransactionMonitor.css  index.ts  (+1 more)
src/lib/: ApiClient.ts  BurnerService.ts  EncryptionClient.ts  EncryptionService.ts  KoraRelayer.ts  NonceManager.ts  NonceService.ts  SecureStorage.ts  ShadowWireClient.ts  ShredrClient.ts  ShredrProgram.ts  StorageService.ts  WebSocketClient.ts  constants.ts  index.ts  types.ts  utils.ts
src/providers/: WalletProvider.tsx  index.ts
tests/: BurnerService.test.ts  IntegrationFlow.test.ts  NonceService.test.ts  README.md  setup.ts
(+11 files in other folders)
