[package]
name = "shredr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"
helius = "0.5.1"
tower_governor = "0.8.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "tls-rustls"] }
dotenvy = "0.15"
