[package]
name = "shredr-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
ephemeral-rollups-pinocchio = "0.11.2"
pinocchio = "0.10.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.5.0"
shank = "0.4.8"

[features]
default = []
logging = []
